Overlay glitches 2.83 beta on intel HD cards. #76273

Closed
opened 2020-04-30 19:37:20 +02:00 by Rodger Davis · 63 comments

Edit by @Alaska

In the mean time, a work around that's worked for a few people is to disable anti-aliasing. This can be down with the steps below:

  1. Select from the top of Blender select Edit>Preferences.
  2. Navigate to the Viewport tab.
  3. Change "viewport anti-aliasing" to Single pass or No anti-aliasing.

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 5500 Intel 4.4.0 - Build 20.19.15.5070
Intel HD 4400 too.
Intel HD 4600 too.

Blender Version
Broken: version: a68bd94d11 (problematic commit)
Worked: a68bd94d11^

Short description of error
Selection overlay and weightpaint overlays looks like if they are glitched. Also overlays seems to occlude view when resizing a brush.

Exact steps for others to reproduce the error
Based on factory settings:

  • Select cube
  • Go to editmode or weight_paint mode.
  • Pan or rotate view.

image.png image.png
video: F8503651

Edit by @Alaska In the mean time, a work around that's worked for a few people is to disable anti-aliasing. This can be down with the steps below: 1. Select from the top of Blender select `Edit>Preferences`. 2. Navigate to the `Viewport` tab. 3. Change "viewport anti-aliasing" to `Single pass` or `No anti-aliasing`. --- **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) HD Graphics 5500 Intel 4.4.0 - Build 20.19.15.5070 Intel HD 4400 too. Intel HD 4600 too. **Blender Version** Broken: version: a68bd94d11 (problematic commit) Worked: a68bd94d11^ **Short description of error** Selection overlay and weightpaint overlays looks like if they are glitched. Also overlays seems to occlude view when resizing a brush. **Exact steps for others to reproduce the error** Based on factory settings: - Select cube - Go to editmode or weight_paint mode. - Pan or rotate view. --- ![image.png](https://archive.blender.org/developer/F8503640/image.png) ![image.png](https://archive.blender.org/developer/F8503643/image.png) video: [F8503651](https://archive.blender.org/developer/F8503651/Overlay_glitches_bug_720.mp4)
Author

Added subscriber: @RodDavis

Added subscriber: @RodDavis

#78059 was marked as duplicate of this issue

#78059 was marked as duplicate of this issue

#78050 was marked as duplicate of this issue

#78050 was marked as duplicate of this issue

#77616 was marked as duplicate of this issue

#77616 was marked as duplicate of this issue

#77486 was marked as duplicate of this issue

#77486 was marked as duplicate of this issue

#77436 was marked as duplicate of this issue

#77436 was marked as duplicate of this issue

#77438 was marked as duplicate of this issue

#77438 was marked as duplicate of this issue

#77415 was marked as duplicate of this issue

#77415 was marked as duplicate of this issue

#77401 was marked as duplicate of this issue

#77401 was marked as duplicate of this issue

#77404 was marked as duplicate of this issue

#77404 was marked as duplicate of this issue

#77406 was marked as duplicate of this issue

#77406 was marked as duplicate of this issue

#77355 was marked as duplicate of this issue

#77355 was marked as duplicate of this issue

#77259 was marked as duplicate of this issue

#77259 was marked as duplicate of this issue

#76980 was marked as duplicate of this issue

#76980 was marked as duplicate of this issue

#76834 was marked as duplicate of this issue

#76834 was marked as duplicate of this issue

#76619 was marked as duplicate of this issue

#76619 was marked as duplicate of this issue
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member
I think this should be used: https://downloadcenter.intel.com/download/29474/Intel-Graphics-Driver-for-Windows-15-40-?product=86210 not this: https://forums.laptopvideo2go.com/topic/33123-2019155070-154043-4th-and-5th-generation-haswell-broadwell-cherry-trail-windows-10-windows-81-windows-8-windows-7/
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Does the issue persist with correct drivers ?

Does the issue persist with correct drivers ?

Added subscriber: @Pasang

Added subscriber: @Pasang

This seems to be intel hd related issue. I've got the same problem in my other laptop with intel hd despite having latest drivers for it. I'll drop more info later.

This seems to be intel hd related issue. I've got the same problem in my other laptop with intel hd despite having latest drivers for it. I'll drop more info later.
Author

I think it may be a graphic driver issue in my case. I know there is an update now, however I cannot use the intel download center. I still have to contact my OEM to fix this issue.

Toshiba Satellite E45W-C4200X is pretty old; 2015. Not sure if it's still supported by Toshiba or Intel though. I'll update later on.

I think it may be a graphic driver issue in my case. I know there is an update now, however I cannot use the intel download center. I still have to contact my OEM to fix this issue. Toshiba Satellite E45W-C4200X is pretty old; 2015. Not sure if it's still supported by Toshiba or Intel though. I'll update later on.
Author

Supposedly I'm up to date. I've rolled back and then updated my graphics driver. Still an issue I guess. From my end, it could be because any further updates are unsupported.

image.png


Pasang, add anything you want to this thread. Maybe could add a few names of Intel HD adapter types you have or tested.

Supposedly I'm up to date. I've rolled back and then updated my graphics driver. Still an issue I guess. From my end, it could be because any further updates are unsupported. ![image.png](https://archive.blender.org/developer/F8506578/image.png) --- Pasang, add anything you want to this thread. Maybe could add a few names of Intel HD adapter types you have or tested.
Member

https://downloadcenter.intel.com/product/86210/Intel-HD-Graphics-5500
These are the correct drivers, as I had commented earlier too. On win 10, you should be allowed to remove the manufacturer supplied drivers and use intel ones.

https://downloadcenter.intel.com/product/86210/Intel-HD-Graphics-5500 These are the correct drivers, as I had commented earlier too. On win 10, you should be allowed to remove the manufacturer supplied drivers and use intel ones.
Author

I've uninstalled my Device Adapter and made sure it uninstalled previous drivers. Rebooted Laptop. Reinstalled my drivers using the intel link. However, I'm still getting glitches in Blender.

Pasang hasn't documented anything here in this thread about their experiences. So, I guess it's an unknown problem and no workarounds.

I've uninstalled my Device Adapter and made sure it uninstalled previous drivers. Rebooted Laptop. Reinstalled my drivers using the intel link. However, I'm still getting glitches in Blender. Pasang hasn't documented anything here in this thread about their experiences. So, I guess it's an unknown problem and no workarounds.

Added subscribers: @Rough-Network, @7Aniket

Added subscribers: @Rough-Network, @7Aniket
Member

Removed subscriber: @7Aniket

Removed subscriber: @7Aniket
Member

Added subscribers: @n, @Jewls

Added subscribers: @n, @Jewls
Author

Sorry @ankitm, for the issue.


I've ran through all the steps to fix it on my end, talking to the manufactures, multiple uninstalls, and downloads/installs.
If a developer cannot reproduce it, then this bug cannot be fixed I guess.

@Pasang do you still have similar graphical issues with your recent Blender builds?

Sorry @ankitm, for the issue. --- I've ran through all the steps to fix it on my end, talking to the manufactures, multiple uninstalls, and downloads/installs. If a developer cannot reproduce it, then this bug cannot be fixed I guess. @Pasang do you still have similar graphical issues with your recent Blender builds?

The issue is related to Anti-Aliasing. Change it to single-pass or none. This is a temporary fix.
@RodDavis , does this work for you?

The issue is related to Anti-Aliasing. Change it to single-pass or none. This is a temporary fix. @RodDavis , does this work for you?

Initially when i posted my bug report i was on 20.19.15.5058
Updated to the latest .5126 made no difference the artifacts are still there.
After that gone down to:
.4835
.4963
And now I'm on .5107 supplied by lenovo(21.04.2020) - there is no difference between driver versions.

//Edit
Changing the anti aliasing to single pass in blender preferances seems to fix the issue

Initially when i posted my bug report i was on 20.19.15.5058 Updated to the latest .5126 made no difference the artifacts are still there. After that gone down to: .4835 .4963 And now I'm on .5107 supplied by lenovo(21.04.2020) - there is no difference between driver versions. //Edit Changing the anti aliasing to single pass in blender preferances seems to fix the issue
Member

Added subscriber: @heindelj

Added subscriber: @heindelj
Member

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

Since there is a working and broken version, can anyone do a git bisect and find the problematic commit ?

https://stackoverflow.com/questions/4713088/how-to-use-git-bisect/37306623#37306623

Since there is a working and broken version, can anyone do a git bisect and find the problematic commit ? https://stackoverflow.com/questions/4713088/how-to-use-git-bisect/37306623#37306623

I did the git bisect (took me ages) and it seems the issue is caused by a68bd94d11
So I'm tagging @fclem here.

I did the git bisect (took me ages) and it seems the issue is caused by a68bd94d11 So I'm tagging @fclem here.

Added subscriber: @fclem

Added subscriber: @fclem
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

Thanks for the bisect!

That commit was a fix for other high priority bugs #75477 ("In Front" visual artifacts) and #74416 (Background image and Xray mode produces checkered pattern )

Thanks for the bisect! That commit was a fix for other high priority bugs #75477 ("In Front" visual artifacts) and #74416 (Background image and Xray mode produces checkered pattern )
Member

Added subscriber: @Gorro_Rojo

Added subscriber: @Gorro_Rojo
Member

Added subscribers: @wafi, @Alaska

Added subscribers: @wafi, @Alaska
Member

Added subscriber: @ESAB

Added subscriber: @ESAB
Member

Added subscriber: @zayno70

Added subscriber: @zayno70
Member

Added subscriber: @TH-10

Added subscriber: @TH-10
Member

Added subscriber: @makarios1132

Added subscriber: @makarios1132
Ankit Meel changed title from Overlay glitches 2.83 beta to Overlay glitches 2.83 beta on intel HD cards. 2020-06-05 08:20:07 +02:00
Member

Added subscriber: @Crashbandit04

Added subscriber: @Crashbandit04
Member

Added subscriber: @ambady.sasi

Added subscriber: @ambady.sasi

@Alaska , Thanks for the tip on turning off anti-aliasing as temporary work around. I've gone back to Blender 2.82a for the time being.

I don't know if this is related to the issue, but when I ticked 'Overlay Smooth Wire' or 'Edit-Mode Smooth Wire' (when I tried Blender 2.83) in the preferences Viewport Menu. Some of the Text fonts disappear. See attached image.

I am using a Lenovo Laptop, and tried Ankit (ankitm) suggestion in downloading the intel drivers from the intel website. Windows 10 keep blocking the install, even when I have uninstalled the Graphic Drivers. I Also tried changing the intel Graphic Properties for 3D applications, but no change there either.

Overlay Smooth Wire.jpg

@Alaska , Thanks for the tip on turning off anti-aliasing as temporary work around. I've gone back to Blender 2.82a for the time being. I don't know if this is related to the issue, but when I ticked 'Overlay Smooth Wire' or 'Edit-Mode Smooth Wire' (when I tried Blender 2.83) in the preferences Viewport Menu. Some of the Text fonts disappear. See attached image. I am using a Lenovo Laptop, and tried Ankit (ankitm) suggestion in downloading the intel drivers from the intel website. Windows 10 keep blocking the install, even when I have uninstalled the Graphic Drivers. I Also tried changing the intel Graphic Properties for 3D applications, but no change there either. ![Overlay Smooth Wire.jpg](https://archive.blender.org/developer/F8580086/Overlay_Smooth_Wire.jpg)

This comment was removed by @TH-10

*This comment was removed by @TH-10*
Member

Added subscriber: @cgate

Added subscriber: @cgate
Member

marking high due to the number of reports

marking high due to the number of reports

Added subscriber: @Wil

Added subscriber: @Wil

Also the ATI mobility Radeon Hd 5650 Graphics-1gb
Has the same problem.
Hopefully this will be resolved soon.

Also the ATI mobility Radeon Hd 5650 Graphics-1gb Has the same problem. Hopefully this will be resolved soon.

This issue was referenced by 7b754c8c99

This issue was referenced by 7b754c8c99526201ad4ed28ce6b216c9b8736c27

This issue was referenced by f71a2fc6c3

This issue was referenced by f71a2fc6c381f32e89ac09112ac3b7ebc3f8a794

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-08 12:10:29 +02:00
Member

Added subscriber: @Sumit11M

Added subscriber: @Sumit11M

Removed subscriber: @ambady.sasi

Removed subscriber: @ambady.sasi

Added subscriber: @gotblender

Added subscriber: @gotblender

This fixed the problem, THANKS!

This fixed the problem, THANKS!

Removed subscriber: @Sumit11M

Removed subscriber: @Sumit11M
Member

Added subscriber: @jachard003

Added subscriber: @jachard003
Member

Added subscriber: @Mineknight

Added subscriber: @Mineknight
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
13 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76273
No description provided.