Fix T76273 Glitches caused by glCopyImageSubData on windows + intel gpu

We limit this fix to Windows Intel GPU whose driver reports at most GL 4.4
support. This limits the fix to the range of reported GPU.